将port 改为80 配置了log框架

--- a/snow/src/main/resources/application.properties
+++ b/snow/src/main/resources/application.properties
@@ -2,3 +2,4 @@ spring.datasource.url=jdbc:mysql://43.143.241.133:3306/snowschema
 spring.datasource.username=bikini
 spring.datasource.password=bikini
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+server.port=80
